remove echos from Makefile

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -49,8 +49,8 @@ test:
   #    - TODO this
   # Some packages might need a `test/commands` key to check CLI.
   # List all the packages/modules that `run_test.py` imports.
-  imports:
-    - unifrac
+  # imports:
+  #   - unifrac
 
 about:
   home: http://github.com/biocore/unifrac
