include pwd in libraries for compile

--- a/sucpp/Makefile
+++ b/sucpp/Makefile
@@ -32,7 +32,9 @@ else
 	CPPFLAGS += -mfma -march=native
 endif
 
-CPPFLAGS += -Wall -Wextra -std=c++11 -pedantic -I. $(OPT) -fPIC
+CURDIR := $(shell pwd)
+
+CPPFLAGS += -Wall -Wextra -std=c++11 -pedantic -L$(CURDIR) -I. $(OPT) -fPIC
 
 test: tree.o test_su.cpp biom.o unifrac.o unifrac_task.o api.o
 	echo $(CPPFLAGS)
