--- a/sucpp/Makefile
+++ b/sucpp/Makefile
@@ -34,7 +34,7 @@ endif
 
 CURDIR := $(shell pwd)
 
-CPPFLAGS += -Wall -Wextra -std=c++11 -pedantic -L$(CURDIR) -I. $(OPT) -fPIC
+CPPFLAGS += -Wall -Wextra -std=c++11 -pedantic -I. $(OPT) -fPIC
 
 test: tree.o test_su.cpp biom.o unifrac.o unifrac_task.o api.o
 	echo $(CPPFLAGS)
