changed requirements for running

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -37,8 +37,8 @@ requirements:
     - Cython >=0.28.3
   run:
     - scikit-bio >=0.5.1
+    - biom-format
     - numpy >=1.12.1
-    - h5py
 
 test:
   requires:
