--- a/.travis.yml
+++ b/.travis.yml
@@ -31,11 +31,11 @@ before_install:
 install:
   # linking against libhdf5_cpp fails right now if we do not use this conda environment.
   # it is unclear why at this time.
-  - conda create -n test-env --file https://data.qiime2.org/distro/core/qiime2-2017.5-conda-linux-64.txt python=$PYTHON_VERSION
+  - conda create -n test-env python=$PYTHON_VERSION
   - source activate test-env
+  - conda install --yes numpy h5py "scikit-bio>=0.5.1" flake8 nose
   # needed for the hdf5 dev tools
-  - conda install --yes -c conda-forge cython
-  - conda install --yes flake8 nose
+  - conda install --yes -c conda-forge cython "hdf5==1.10.4" biom-format
   - sed -i 's/^CXXBASE=.*/CXXBASE=clang++/' `which h5c++`
   - sed -i 's/^CXXLINKERBASE=.*/CXXLINKERBASE=clang++/' `which h5c++`
   - export CC=`which h5c++`
