--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ addons:
       - gdb
       - apport
       - libhdf5-serial-dev
+      - g++-4.9.2
 
 language: 
   - python
@@ -36,8 +37,8 @@ install:
   - conda install --yes numpy h5py "scikit-bio>=0.5.1" flake8 nose
   # needed for the hdf5 dev tools
   - conda install --yes -c conda-forge cython "hdf5==1.10.4" biom-format
-  - sed -i 's/^CXXBASE=.*/CXXBASE=clang++/' `which h5c++`
-  - sed -i 's/^CXXLINKERBASE=.*/CXXLINKERBASE=clang++/' `which h5c++`
+  - sed -i 's/^CXXBASE=.*/CXXBASE=g++/' `which h5c++`
+  - sed -i 's/^CXXLINKERBASE=.*/CXXLINKERBASE=g++/' `which h5c++`
   - export CC=`which h5c++`
   # verify both installation methods
   - 'if [ ${EDITABLE_PIP} ]; then
