--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,11 @@
+sudo: required
 dist: trusty
-matrix: 
-  include:
-    - os: linux
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-          packages:
-            - gdb
-            - apport
-            - libhdf5-serial-dev
-            - g++-4.9
-        env:
-            - MATRIX_EVAL="USEGCC=gcc-4.9 && USECXX=g++-4.9"
+addons:
+  apt:
+    packages:
+      - gdb
+      - apport
+      - libhdf5-serial-dev
 
 language: 
   - python
@@ -20,14 +13,13 @@ language:
 
 cache: packages
 
-# compiler:
-#   - gcc
+compiler:
+  - gcc
 
 env:
   - PYTHON_VERSION=3.5 EDITABLE_PIP=1
   - PYTHON_VERSION=3.5 EDITABLE_PIP=0
 before_install:
-  - eval "${MATRIX_EVAL}"
  # https://github.com/springmeyer/travis-coredump/blob/master/.travis.yml
   - ulimit -c
   - ulimit -a -S
@@ -44,8 +36,8 @@ install:
   - conda install --yes numpy h5py "scikit-bio>=0.5.1" flake8 nose
   # needed for the hdf5 dev tools
   - conda install --yes -c conda-forge cython "hdf5==1.10.4" biom-format
-  - sed -i "s/^CXXBASE=.*/CXXBASE=$USECXX/" `which h5c++`
-  - sed -i "s/^CXXLINKERBASE=.*/CXXLINKERBASE=$USECXX/" `which h5c++`
+  - sed -i 's/^CXXBASE=.*/CXXBASE=clang++/' `which h5c++`
+  - sed -i 's/^CXXLINKERBASE=.*/CXXLINKERBASE=clang++/' `which h5c++`
   - export CC=`which h5c++`
   # verify both installation methods
   - 'if [ ${EDITABLE_PIP} ]; then
