rework sed commands

--- a/.travis.yml
+++ b/.travis.yml
@@ -48,8 +48,8 @@ install:
   - conda install --yes numpy h5py "scikit-bio>=0.5.1" flake8 nose
   # needed for the hdf5 dev tools
   - conda install --yes -c conda-forge cython "hdf5==1.8.17" biom-format
-  - sed -i "s/^CXXBASE=.*/CXXBASE=$CXX_FOR_BUILD/" `which h5c++`
-  - sed -i "s/^CXXLINKERBASE=.*/CXXLINKERBASE=$CXX_FOR_BUILD/" `which h5c++`
+  - sed -i "s|^CXXBASE=.*|CXXBASE=$CXX_FOR_BUILD|" `which h5c++`
+  - sed -i "s|^CXXLINKERBASE=.*|CXXLINKERBASE=$CXX_FOR_BUILD|" `which h5c++`
   - export CC=`which h5c++`
   - pushd sucpp; make test; make main; make api; make capi_test; make rapi_test; popd 
   # verify both installation methods
