--- a/.travis.yml
+++ b/.travis.yml
@@ -29,8 +29,9 @@ before_install:
   - export CC_FOR_BUILD=/usr/local/bin/gcc
   - export CXX_FOR_BUILD=/usr/local/bin/g++
 
-  - $CC_FOR_BUILD -v
-  - $CXX_FOR_BUILD -v
+  - $CC_FOR_BUILD -v # verify gcc version
+  - $CXX_FOR_BUILD -v # verify g++ version
+  - ld -v
 
  # https://github.com/springmeyer/travis-coredump/blob/master/.travis.yml
   - ulimit -c
@@ -48,8 +49,8 @@ install:
   - conda install --yes numpy h5py "scikit-bio>=0.5.1" flake8 nose
   # needed for the hdf5 dev tools
   - conda install --yes -c conda-forge cython "hdf5==1.8.17" biom-format
-  - sed -i "s|^CXXBASE=.*|CXXBASE=$CXX_FOR_BUILD|" `which h5c++`
-  - sed -i "s|^CXXLINKERBASE=.*|CXXLINKERBASE=$CXX_FOR_BUILD|" `which h5c++`
+  - sed -i "s|^CXXBASE=.*|CXXBASE=$CXX_FOR_BUILD|" `which h5c++` # make sure hdf5 is using right compiler
+  - sed -i "s|^CXXLINKERBASE=.*|CXXLINKERBASE=$CXX_FOR_BUILD|" `which h5c++` # make sure hdf5 is using right compiler
   - export CC=`which h5c++`
   - pushd sucpp; make test; make main; make api; make capi_test; make rapi_test; popd 
   # verify both installation methods
@@ -58,6 +59,7 @@ install:
      else
         pip install . || travis_terminate 1;
      fi'
+
 script:
   - ulimit -c unlimited -S
   - pushd sucpp; ./test_su; ./test_api; popd
