add peforming conda build flag

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,11 +32,13 @@ before_install:
   - export PATH=/usr/lib/binutils-2.26/bin:${PATH}
   - export CC_FOR_BUILD=/usr/local/bin/gcc
   - export CXX_FOR_BUILD=/usr/local/bin/g++
-
+  - export PERFORMING_CONDA_BUILD=True
   - $CC_FOR_BUILD -v # verify gcc version
   - $CXX_FOR_BUILD -v # verify g++ version
+  - ls /usr/lib/binutils-2.26/bin
   - which ld
   - ld -v
+  - echo 
 
  # https://github.com/springmeyer/travis-coredump/blob/master/.travis.yml
   - ulimit -c
