--- a/.travis.yml
+++ b/.travis.yml
@@ -65,10 +65,10 @@ install:
   - conda install --yes -c conda-forge cython "hdf5==1.10.4" biom-format
   - sed -i "s|^CXXBASE=.*|CXXBASE=$CXX_FOR_BUILD|" `which h5c++` # make sure hdf5 is using right compiler
   - sed -i "s|^CXXLINKERBASE=.*|CXXLINKERBASE=$CXX_FOR_BUILD|" `which h5c++` # make sure hdf5 is using right compiler
-  - sed -i 's/H5BLD_CXXFLAGS.*//' `which h5c++`
-  - sed -i 's/H5BLD_CPPFLAGS.*//' `which h5c++`
-  - sed -i 's/H5BLD_LDFLAGS.*//' `which h5c++`
-  - sed -i 's/H5BLD_LIBS.*//' `which h5c++`
+  - sed -i 's/\(H5BLD_CXXFLAGS="\)\(.*\)\("\)/\1 \3/' `which h5c++`
+  - sed -i 's/\(H5BLD_CPPFLAGS="\)\(.*\)\("\)/\1 \3/' `which h5c++`
+  - sed -i 's/\(H5BLD_LDFLAGS="\)\(.*\)\("\)/\1 \3/' `which h5c++`
+  - cat `which h5c++`
     #- sed -i 's/-fno-plt //' `which h5c++`
   - echo $LD_LIBRARY_PATH
   - export CC=`which h5c++`
