--- a/.travis.yml
+++ b/.travis.yml
@@ -63,6 +63,7 @@ install:
   - sed -i 's/\(H5BLD_CPPFLAGS="\)\(.*\)\("\)/\1 \3/' `which h5c++`
   - sed -i 's/\(H5BLD_LDFLAGS="\)\(.*\)\("\)/\1 \3/' `which h5c++`
   - cat `which h5c++`
+  - printenv
     #- sed -i 's/-fno-plt //' `which h5c++`
   - echo $LD_LIBRARY_PATH
   - export CC=`which h5c++`
