--- a/.travis.yml
+++ b/.travis.yml
@@ -53,6 +53,7 @@ install:
   - python3-config --cflags
   - clang -v
   - cat `which h5c++`
+  - printenv
   # verify both installation methods
   - 'if [ ${EDITABLE_PIP} ]; then
         pip install -e . || travis_terminate 1;
