--- a/.travis.yml
+++ b/.travis.yml
@@ -62,6 +62,7 @@ install:
   - sed -i 's/\(H5BLD_CXXFLAGS="\)\(.*\)\("\)/\1 \3/' `which h5c++`
   - sed -i 's/\(H5BLD_CPPFLAGS="\)\(.*\)\("\)/\1 \3/' `which h5c++`
   - sed -i 's/\(H5BLD_LDFLAGS="\)\(.*\)\("\)/\1 \3/' `which h5c++`
+  - sed -i 's/^STATIC_AVAILABLE=.*/STATIC_AVAILABLE="no"/' `which h5c++`
   - cat `which h5c++`
   - printenv
     #- sed -i 's/-fno-plt //' `which h5c++`
