--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,31 @@
 sudo: required
 dist: trusty
+os: linux
 addons:
   apt:
+    sources:
+      - ubuntu-toolchain-r-test
     packages:
-      - gdb
-      - apport
+      - gcc-4.9
+      - g++-4.9
       - libhdf5-serial-dev
 
-language: 
-  - python
-  - r
-
-cache: packages
-
-compiler:
-  - gcc
+language: cpp
 
 env:
   - PYTHON_VERSION=3.5 EDITABLE_PIP=1
   - PYTHON_VERSION=3.5 EDITABLE_PIP=0
 before_install:
- # https://github.com/springmeyer/travis-coredump/blob/master/.travis.yml
+  - echo $LD_LIBRARY_PATH
+  - sudo ln -s /usr/bin/gcc-4.9 /usr/local/bin/gcc
+  - sudo ln -s /usr/bin/g++-4.9 /usr/local/bin/g++
+  - export CC_FOR_BUILD=/usr/local/bin/gcc
+  - export CXX_FOR_BUILD=/usr/local/bin/g++
+  - export PERFORMING_CONDA_BUILD=True
+  # verify compilter versions
+  - $CC_FOR_BUILD -v 
+  - $CXX_FOR_BUILD -v 
+  # https://github.com/springmeyer/travis-coredump/blob/master/.travis.yml
   - ulimit -c
   - ulimit -a -S
   - ulimit -a -H
@@ -29,23 +34,29 @@ before_install:
   - ./miniconda.sh -b
   - export PATH=/home/travis/miniconda3/bin:$PATH
 install:
-  # linking against libhdf5_cpp fails right now if we do not use this conda environment.
-  # it is unclear why at this time.
-  - conda create -n test-env --file https://data.qiime2.org/distro/core/qiime2-2017.5-conda-linux-64.txt python=$PYTHON_VERSION
+  - conda create --yes -n test-env python=$PYTHON_VERSION
   - source activate test-env
+  - conda install --yes numpy "h5py==2.7.0" "scikit-bio>=0.5.1" flake8 nose
   # needed for the hdf5 dev tools
-  - conda install --yes -c conda-forge cython
-  - conda install --yes flake8 nose
-  - sed -i 's/^CXXBASE=.*/CXXBASE=clang++/' `which h5c++`
-  - sed -i 's/^CXXLINKERBASE=.*/CXXLINKERBASE=clang++/' `which h5c++`
+  - conda install --yes -c conda-forge cython "hdf5==1.8.17" biom-format
+  # make sure hdf5 is using the compiler we want to use for this build
+  - sed -i "s|^CXXBASE=.*|CXXBASE=$CXX_FOR_BUILD|" `which h5c++` 
+  - sed -i "s|^CXXLINKERBASE=.*|CXXLINKERBASE=$CXX_FOR_BUILD|" `which h5c++` 
+  # remove these flags for compiling with gcc
+  - sed -i 's/\(H5BLD_CXXFLAGS="\)\(.*\)\("\)/\1 \3/' `which h5c++` 
+  - sed -i 's/\(H5BLD_CPPFLAGS="\)\(.*\)\("\)/\1 \3/' `which h5c++` 
+  - sed -i 's/\(H5BLD_LDFLAGS="\)\(.*\)\("\)/\1 \3/' `which h5c++`
+  # make sure dynamic linking to shared libraries is enabled
+  - sed -i 's/^STATIC_AVAILABLE=.*/STATIC_AVAILABLE="no"/' `which h5c++` 
   - export CC=`which h5c++`
+  - pushd sucpp; make test; make main; make api; make capi_test; make rapi_test; popd 
   # verify both installation methods
   - 'if [ ${EDITABLE_PIP} ]; then
         pip install -e . || travis_terminate 1;
      else
         pip install . || travis_terminate 1;
      fi'
-  - pushd sucpp; make test; make main; make api; make capi_test; make rapi_test; popd 
+
 script:
   - ulimit -c unlimited -S
   - pushd sucpp; ./test_su; ./test_api; popd
