Faith pd cli (#70)
* added osx build and update requirments

* updated compute status messages to reflect changes made in #65

* fixed array size for compute messages

* faith pd cli builds, needs test

* test file for faith pd cli

* precision modification to truth table

* added faith pd cli tests

* removed unnecessary arguments from signature

* rollback travis.yml to master plus new tests

* qiime 2019.4 requirements

* fixed abberant spacing

* seperate wget environemnt and build from file

* remove debug info

* add header to cli vec

* remove header from output to check with test values

* addressing comments from @ElDeveloper in #70

* re-removed open_error from write_mat

--- a/.travis.yml
+++ b/.travis.yml
@@ -83,3 +83,8 @@ script:
   - exp=$($MD5 ci/test.dm | awk '{ print $1 }')
   - obs=$($MD5 ci/test.dm.partial | awk '{ print $1 }')
   - python -c "assert '${obs}' == '${exp}'"
+  - ./sucpp/faithpd -i unifrac/tests/data/crawford.biom -t unifrac/tests/data/crawford.tre -o ci/test.faith.obs
+  - tail -n +2 ci/test.faith.obs > ci/test.faith.header-removed.obs
+  - exp1=$($MD5 unifrac/tests/data/test.faith.exp | awk '{ print $1 }')
+  - obs1=$($MD5 ci/test.faith.header-removed.obs | awk '{ print $1 }')
+  - python -c "assert '${obs1}' == '${exp1}'"
