--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,9 @@ addons:
       - g++-4.9
       - libhdf5-serial-dev
 
-language: cpp
+language: 
+  - cpp
+  - r
 
 env:
   - PYTHON_VERSION=3.6 EDITABLE_PIP=1
