--- a/.travis.yml
+++ b/.travis.yml
@@ -100,6 +100,6 @@ script:
   # test example API's
   - pushd sucpp
   - make capi_test
-  - ./capi_test
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then ./capi_test 2 ; else ./capi_test 1 ; fi
   - make rapi_test
   - popd
