install Rcpp as root

--- a/.travis.yml
+++ b/.travis.yml
@@ -75,7 +75,7 @@ install:
     else
         brew install r ;
     fi
-  - R -e 'install.packages("Rcpp", repos="http://cran.us.r-project.org")'
+  - sudo R -e 'install.packages("Rcpp", repos="http://cran.us.r-project.org")'
   - pushd sucpp
   # make c api for testing 
   - make capi_test
