relaxing version constraints (#80)
* relaxing version constraints

* add debug information to yml

* add c_str to biom

--- a/.travis.yml
+++ b/.travis.yml
@@ -41,10 +41,10 @@ before_install:
 install:
   - conda create --yes -n test-env python=$PYTHON_VERSION
   - source activate test-env
-  - conda install --yes numpy "h5py==2.7.0" "scikit-bio>=0.5.1" flake8 nose
+  - conda config --add channels conda-forge
+  - conda install --yes cython "hdf5>=1.8.17" biom-format numpy "h5py>=2.7.0" "scikit-bio>=0.5.1" flake8 nose
   # needed for the hdf5 dev tools
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then SED='sed -i'; else SED='sed -i '"'"''"'"' '; fi
-  - conda install --yes -c conda-forge cython "hdf5==1.8.17" biom-format
   # make sure hdf5 is using the compiler we want to use for this build
   - $SED "s|^CXXBASE=.*|CXXBASE=$CXX_FOR_BUILD|" `which h5c++` 
   - $SED "s|^CXXLINKERBASE=.*|CXXLINKERBASE=$CXX_FOR_BUILD|" `which h5c++` 
