Optimize for larger GPUs, but add option for SMALLGPU

--- a/sucpp/Makefile
+++ b/sucpp/Makefile
@@ -40,6 +40,10 @@ ifndef NOGPU
 		# optional info
 		CPPFLAGS += -Minfo=accel
         endif	
+	ifdef SMALLGPU
+		CPPFLAGS += -DSMALLGPU
+	endif
+
 endif
 
 ifneq (,$(findstring pgi,$(COMPILER)))
